--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -14,10 +14,13 @@
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@sentry/nextjs": "^7.0.0",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0",
