--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -45,7 +45,8 @@
     "zod": "^3.24.1",
     "zustand": "^4.5.0",
     "framer-motion": "^10.18.0",
-    "@heroicons/react": "^2.1.1"
+    "@heroicons/react": "^2.1.1",
+    "geist": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
