--- a/packages/soroban/contracts/tipping_reward/Cargo.toml
+++ b/packages/soroban/contracts/tipping_reward/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "contract1"
+name = "tipping-rewards"
 version = "0.0.0"
 edition = "2021"
 publish = false
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 doctest = false
 
 [dependencies]
-soroban-sdk = { workspace = true }
+soroban-sdk = { version = "22.0.6" }
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
