--- a/packages/soroban/Cargo.toml
+++ b/packages/soroban/Cargo.toml
@@ -5,7 +5,7 @@ members = [
 ]
 
 [workspace.dependencies]
-soroban-sdk = "22"
+soroban-sdk = { version = "22.0.6" }
 
 [profile.release]
 opt-level = "z"
@@ -21,3 +21,4 @@ lto = true
 [profile.release-with-logs]
 inherits = "release"
 debug-assertions = true
+
