--- a/packages/soroban/contracts/user-rating-contract/Cargo.toml
+++ b/packages/soroban/contracts/user-rating-contract/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "rating-system"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 soroban-sdk = { workspace = true }
