--- a/packages/soroban/Cargo.toml
+++ b/packages/soroban/Cargo.toml
@@ -7,6 +7,9 @@ members = [
 [workspace.dependencies]
 soroban-sdk = { version = "22.0.6" }
 
+[dev-dependencies]
+proptest = "1.7.0"
+
 [profile.release]
 opt-level = "z"
 overflow-checks = true
