feat: add cargo fuzz for smart contracts

--- a/packages/soroban/Cargo.toml
+++ b/packages/soroban/Cargo.toml
@@ -9,6 +9,7 @@ soroban-sdk = { version = "22.0.6" }
 
 [dev-dependencies]
 proptest = "1.7.0"
+libfuzzer-sys = "0.4"
 
 [profile.release]
 opt-level = "z"
