Add Waitlist functionality and Tests for Workflows

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,24 +1,29 @@
-name: Nextjs Frontend CI
+name: Next.js Frontend CI
 
 on:
   push:
     branches: ['main']
+    paths:
+      - 'packages/nextjs/**'
   pull_request:
     branches: ['main']
+    paths:
+      - 'packages/nextjs/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Install Bun
         run: |
           curl -fsSL https://bun.sh/install | bash
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
-      - name: Cache bun dependencies
+      - name: Cache Bun dependencies
         uses: actions/cache@v4
         with:
           path: ~/.bun/install/cache
@@ -34,6 +39,6 @@ jobs:
         run: bun run lint
         working-directory: packages/nextjs
 
-      - name: Build Bun Nextjs
+      - name: Build application
         run: bun run build
         working-directory: packages/nextjs
