--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,12 @@ name: Soroban Smart Contracts CI
 on:
   push:
     branches: ['main']
+    paths:
+      - 'packages/soroban/**'
   pull_request:
     branches: ['main']
+    paths:
+      - 'packages/soroban/**'
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,35 +18,39 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Install Rust
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           source $HOME/.cargo/env
+
       - name: Install Rust target for Soroban
         run: |
-          source $HOME/.cargo/env
           rustup target add wasm32v1-none
-      - name: Install Stellar CLI with Homebrew
+        env:
+          PATH: ${{ env.PATH }}:$HOME/.cargo/bin
+
+      - name: Install Stellar CLI
         run: |
           brew update
           brew install stellar-cli
           stellar --version
-      - name: Build Cargo project
-        run: |
-          source $HOME/.cargo/env
-          cargo build --verbose
+
+      - name: Build Rust project
+        run: cargo build --verbose
+        working-directory: packages/soroban
+        env:
+          PATH: ${{ env.PATH }}:$HOME/.cargo/bin
+
+      - name: Build Soroban contracts
+        run: stellar contract build --verbose
         working-directory: packages/soroban
 
-      - name: Build Soroban contract
-        run: |
-          source $HOME/.cargo/env
-          stellar contract build --verbose
+      - name: Run tests
+        run: cargo test --verbose
         working-directory: packages/soroban
-
-      - name: Run Cargo tests
-        run: |
-          source $HOME/.cargo/env
-          cargo test --verbose
-        working-directory: packages/soroban
+        env:
+          PATH: ${{ env.PATH }}:$HOME/.cargo/bin
