Dockerize project for easy local development

--- a/packages/gin/.env.sample
+++ b/packages/gin/.env.sample
@@ -1,6 +1,16 @@
-   PORT=8080
-   DB_HOST=localhost
-   DB_USER=postgres
-   DB_PASSWORD=secret
-   DB_NAME=akkuea
-   DB_PORT=5432
+# Database Configuration
+DB_HOST=postgres
+DB_USER=postgres
+DB_PASSWORD=secret
+DB_NAME=akkuea
+DB_PORT=5432
+
+# API Configuration
+PORT=8080
+
+# JWT Configuration (if needed)
+JWT_SECRET=your-secret-key-here
+JWT_EXPIRATION=24h
+
+# Logging
+LOG_LEVEL=info
