--- a/packages/gin/docker-compose.yml
+++ b/packages/gin/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       DB_NAME: akkuea
       DB_PORT: 5432
       PORT: 8080
+      JWT_SECRET: your-super-secret-jwt-key-change-this-in-production
     ports:
       - "8080:8080"
     depends_on:
