--- a/packages/gin/env.example
+++ b/packages/gin/env.example
@@ -8,8 +8,8 @@ DB_PORT=5432
 # API Configuration
 PORT=8080
 
-# JWT Configuration (if needed)
-JWT_SECRET=your-secret-key-here
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRATION=24h
 
 # Logging
