--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -64,7 +64,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "19.1.12",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.1",
     "@vitest/coverage-v8": "3.2.4",
