--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -48,6 +48,7 @@
     "pg": "^8.11.3",
     "prisma": "^5.9.1",
     "react": "^18.2.0",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
     "react-query": "^3.39.3",
