--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -15,22 +15,22 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
-    "lucide-react": "^0.485.0",
-    "next": "15.2.4",
+  "lucide-react": "^0.544.0",
+  "next": "^15.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "typescript": "^5.9.2",
+    "@types/node": "^24.5.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^15.5.3",
     "@eslint/eslintrc": "^3"
   }
 }
