--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -42,6 +42,7 @@
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
     "next": "^15.3.4",
     "next-themes": "^0.4.4",
