Integrated AI content curation: added curation service, resource endpoints, model status field, and env config

--- a/packages/gin/env.example
+++ b/packages/gin/env.example
@@ -12,5 +12,15 @@ PORT=8080
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRATION=24h
 
+# AI Curation configuration
+# Provider can be: xai (default)
+CURATION_PROVIDER=xai
+# xAI Grok API key
+XAI_API_KEY=
+# Optional: override base URL; default https://api.x.ai/v1
+XAI_BASE_URL=
+# xAI model to use, e.g., grok-3, grok-3-mini, grok-code-fast-1
+XAI_MODEL=grok-3-mini
+
 # Logging
 LOG_LEVEL=info
