--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -69,6 +69,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.1",
     "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "jsdom": "^26.1.0",
