--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -76,6 +76,8 @@
     "@vitest/ui": "3.2.4",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "jsdom": "^27.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
