--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -50,6 +50,7 @@
     "react": "^18.2.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-query": "^3.39.3",
     "redis": "^4.6.13",
