--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,16 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install dependencies
+      - name: Install root dependencies
         run: bun install
+
+      - name: Install nextjs dependencies
+        run: bun install
+        working-directory: packages/nextjs
 
       - name: Run tests with coverage
         run: bun test --coverage --reporter=default --reporter=junit --reporter-outfile=./bun.xml
+        working-directory: packages/nextjs
 
       - name: Display coverage summary
         if: always()
