fix(tailwind): resolve TypeScript error and improve DX
This commit addresses a TypeScript error in the tailwind.config.ts file by replacing a require statement with an import, aligning with modern ES module standards. It also enhances the development experience by adding a workspaces field to the root package.json, ensuring consistent dependency installation across the project. Additionally, a missing dependency has been added to the assistant package, and a new .eslintrc.json file has been created to maintain code quality.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "packageManager": "bun@1.0.25",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "format": "prettier --write .",
     "format:check": "prettier --check .",
