--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -44,6 +44,7 @@
     "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
+    "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "prisma": "^6.16.2",
@@ -57,7 +58,6 @@
     "redis": "^4.6.13",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
-
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
